# ritiko-shop-plugin

./: MANIFEST.in  README.md  __init__.py  apps.py  menus.py  models.py  permissions.py  plugin.json  pyproject.toml  settings.py  setup.py  urls.py  views.py  widgets.py
management/commands/: populate_shop.py
migrations/: 0001_initial.py  0002_product_image_url.py
static/js/: shop.js
templates/: shop.html
templates/widgets/: inventory_alerts.html  sales_stats.html
